# PVGPlugins

./: CMakeLists.txt  PVG_PLUGINS_LICENSE.txt
Filters/: CMakeLists.txt  FiltersCategory.xml  FiltersSM.xml  GUI.qrc
Filters/AnnotateVolume/: vtkAnnotateVolume.cxx
Filters/ApplySchedule/: pqApplySchedule.cxx
Filters/ComputeVolumes/: vtkComputeVolumes.h
Filters/Mine24DtoMap3D/: vtkMine24DtoMap3D.cpp
Filters/StringArrayToIndex/: StringArrayToIndex.xml  vtkStringArrayToIndex.cpp
NonBSDPlugins/: CMakeLists.txt
Readers/: CMakeLists.txt  GUI.qrc  ReadersClient.xml  ReadersSM.xml  WindowsReadersSM.xml
Readers/DXFReader/: vtkDXFObject.cxx
Readers/DataMineReader/: pqDataMineWireFrameReader.cxx  vtkDataMineWireFrameReader.cxx
Readers/DrillHoleReader/: pqDrillHoleReader.cxx
Readers/FLAC3DReader/: FLAC3DReader.xml  pqFLAC3DReader.cpp  pqFLAC3DReader.h  pqFLAC3DReader.ui  vtkFLAC3DReader.cpp  vtkFLAC3DReader.h
Readers/LineNetworkReader/: pqLineNetworkReader.cxx
Readers/ODBCReader/: CMakeLists.txt  ODBCReader.xml  pqODBCReader.cpp  vtkODBCReader.cpp  vtkODBCReader.h
Readers/OracleReader/: CMakeLists.txt  example.oracle  vtkOracleReader.cpp  vtkOracleReader.h
Readers/PointSetReader/: pqPointSetReader.cxx  vtkPointSetReader.cpp
Readers/SOTResult/: pqSOTResult.cxx
Writers/: CMakeLists.txt
